Theme/src/generic/sass/_standardPage.scss
/* ... */
.bcdTableHeadHolder {
  position: relative;
}
.bcdCloneTableHolder {
  position: absolute;
  background-color: #ffffff;
  top: 0;
  left: 0;
}
.bcdCloneTableHolder .bcdReport{
  margin-bottom: 0;
}

/* ******************************************************************* */
/* chips */
/* ******************************************************************* */

$chips-text-color:  #3c5b7b !default;
$chips-background-color:  #eceff2 !default;
$chips-close-color: #c00 !default;

.bcdChipChooser {
  
  position: relative;
  
  ul { padding: 0; max-height: 10em; background-color: inherit; border: none; }
  .bcdLower {
    height: 10em;
    .bcdLoading {width: 1em; height: 1em;}
  }

  .bcdLowerContainer { position: absolute; z-index: 25000; width: 100%; }

  .bcdMiddle {
    span {
      position: relative; cursor:pointer;
      &:after {
        font-family: 'Font Awesome 5 Free', sans-serif;
        font-weight: bold;
        color: #3c5b7b;
        margin-left: .3em;
        position: absolute;
        right: 1em;
        padding-top: .5em;
      }
      input {
        padding-right: 2em;
        display: inline-block;
      }
    }
    .bcdDown:after { content: "\f078"; }
    .bcdUp:after { content: "\f077";}
   }

  .bcdUpper {
    li { margin: 0.3em; display: inline-block; }

    .bcdConnectableHover,
    .ui-selecting,
    .ui-selected {
      background-color: inherit !important;
      .bcdItem,
      .bcdCloseItem:after { background-color: $chips-text-color; color: $chips-background-color; }
    }

    .bcdItem {
      padding: 0.1em 0.4em;
      border: 1px solid $chips-text-color;
      display: inline-block;
      background-color: $chips-background-color;
      color: $chips-text-color;
      border-radius: 1em;
      cursor: default;
    }

    .bcdCloseItem {
      &:hover:after { color: $chips-close-color; }
      &:after {
        cursor: pointer;
        content: "\f00d";
        font-style: normal;
        font-family: 'Font Awesome 5 Free', sans-serif;
        font-weight: bold;
        color: $chips-text-color;
        margin-left: .3em;
      }
    }
    label {
      font-size: .8em;
      font-weight: normal;
      padding: 0 0 0 .3em;
      margin: 0;
    }
  }
  &.bcdSplit .bcdUpper {
    display: flex;
    text-align: right;
    border: 1px solid $border-color;
    .bcdLeft, .bcdRight {
      width: 50%;
    }
    .bcdConnectable {
      overflow-y: scroll;
      overflow-x: inherit;
    }
  }
}

.bcdReport.bcdStickyTable tfoot tr > *,
.bcdReport.bcdStickyTable thead tr > *,
.bcdReport.bcdStickyTable tbody tr:nth-of-type(even) > * { background-color: #ffffff; }
.bcdReport.bcdStickyTable tbody tr:nth-of-type(odd)  > * { background-color: #f2f2f2; }
.bcdReport.bcdStickyTable tbody tr>* { border: 1px solid $border-color; border-left-style: none; border-right-style: none; }
.bcdReport.bcdStickyTable thead tr>*, .bcdReport.bcdStickyTable tfoot tr>* { border: none !important; }

.bcdStickyContainer { scrollbar-width: thin; scrollbar-color: $border-color auto; }
.bcdStickyContainer::-webkit-scrollbar { width: .5em; height: .5em; }
.bcdStickyContainer::-webkit-scrollbar-corner,
.bcdStickyContainer::-webkit-scrollbar-track { background-color: transparent; }
.bcdStickyContainer::-webkit-scrollbar-thumb { background-color: $border-color; border-radius: 1em; }


.bcdStickyTable {
  position: relative;
  &.bcdStickyHead thead { z-index: 102; position: sticky; top: 0;}
  &.bcdStickyFoot tfoot { z-index: 102; position: sticky; bottom: 0; }
  &.bcdStickyFirstRow tbody tr:first-child { z-index: 102; position: sticky; }
  &.bcdStickyLastRow tbody tr:last-child { z-index: 102; position: sticky; }
  &.bcdStickyFirstColumn {
    tfoot tr, thead tr { *:first-child { position: sticky; left: 0; } }
    tbody tr *:first-child { z-index: 100; position: sticky; left: 0; }
  }
  &.bcdStickyLastColumn {
    tfoot tr, thead tr { *:last-child { z-index: 102; position: sticky; right: 0; } }
    tbody tr *:last-child { z-index: 100; position: sticky; right: 0; }
  }
  .bcdStickyNthRow,
  tfoot .bcdStickyNthCol,
  thead .bcdStickyNthCol { z-index: 102; position: sticky; }
  tbody .bcdStickyNthCol { z-index: 100; position: sticky; }
}

.bcdVisualizeXml {
 .bcdCollapse:after { content: "-"; }
 .bcdExpand:after { content: "+"; } 
}

.bcduiHtmlEditor .bcdButton { margin: .5em .5em 0 0; }

.bcdHtmlPreview {
  a,
  a:active,
  a:focus,
  a:visited {
    color: #aaa;
    text-decoration: none;
  }
  a:hover { color: #000; }
  a:after { content: "\f06e"; font-family: "Font Awesome 5 Free", sans-serif; font-weight: 600; padding-right: 0.5em; }
}

.bcdCssReset { all: revert; }

.bcdHtmlViewerFooter {
  padding-top: 1em;
  border-top: 2px solid #dddddd;
  margin-top: .5em;
  .bcdButton.bcdDisabled {
     background-color: #aaa;
     border-color: #aaa;
  }
  .col:last-child { flex: 0; }
  .bcdCount { padding: 0 1em; }
}

.bcdHtmlPreview,
.bcdHtmlViewer { width: 640px; height: 240px; overflow-y: auto; }
.bcdCkEditorContainer { width: 640px; }

.bcdMessages.bcdCheckbox { text-align: center; }

.bcdInlineChart {
  > thead > tr > th { text-align: center; }
  td { text-align: left; } /* chart flyover */
  td.bcdChartCell { padding: 0; margin: 0; height: 6em; }
  td.bcdLegend { height: 8em; }
}
/* ... */

